--- a/santhosh/ludusapp/static/busstop.html
+++ b/santhosh/ludusapp/static/busstop.html
@@ -11,7 +11,7 @@
             Platforms are fully occupied..
             You can't able to see the Road.
             
-            Fully congested arni</h2>
+            the bus stands is the popular in the arni.</h2>
         </h2>
         </body>
 </html>
