--- a/santhosh/ludusapp/static/map.html
+++ b/santhosh/ludusapp/static/map.html
@@ -12,13 +12,14 @@
         <font color="red"><b>Santhosh D (23011482)</b></font>
     </h2>
     <center>
-        <img src="map.png" height="700" width="1450" usemap="#Arni">
+        <img src="map.png" height="630" width="1450" usemap="#Arni">
         <map name="Arni">
-        <area shape="rect" coords="725,155,755,170" href="mobileshop.html" title="Poorvika Mobiles">
-        <area shape="rect" coords="660,240,710,290" href="thearter.html" title="Sri Lakshmi Theater">
+        <area shape="rect" coords="725,130,755,170" href="mobileshop.html" title="Poorvika Mobiles">
+        <area shape="rect" coords="660,210,710,290" href="thearter.html" title="Sri Lakshmi Theater">
         <area shape="rect" coords="580,90,650,130" href="ground.html" title="Kottai Ground">
-        <area shape="rect" coords="700,210,750,260" href="snacksshop.html" title="parry snacks">
+        <area shape="rect" coords="700,180,750,250" href="snacksshop.html" title="parry snacks">
         <area shape="rect" coords="720,50,770,100" href="busstop.html" title="old bus stand">
+        <area shape="react" coords=""
     </map>
 
     </center>
