--- a/santhosh/ludusapp/static/mobileshop.html
+++ b/santhosh/ludusapp/static/mobileshop.html
@@ -6,4 +6,7 @@
     </head>
     <hr>
     <body bgcolor="cyan" >
+        <h2>Poorvika mobileshop is the famous shop in my city. More people would like visit and purchase mobile and many other gadgets.It is a best offering shop and best selling shop in  arni.
+        </h2>
+        </body>
 </html>
